k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: investment-portfolio-manager-ingress
  namespace: investment-portfolio-manager
spec:
  rules:
    - host: invest.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
